--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typeorm": "typeorm-ts-node-esm"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -31,6 +32,8 @@
     "@nestjs/typeorm": "^10.0.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
+    "googleapis": "^129.0.0",
+    "handlebars": "^4.7.8",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -48,6 +51,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.14",
     "@types/passport-jwt": "^3.0.13",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^2.0.12",
